SERVER-64409 Prevent concurrent calls to std::abort due to assertion failures